Src/Main/main.css
body {
    background-color: #011F34;
    display: grid;
    place-content: center;
    overflow: hidden;

    --taskbarBorderRadius: 10px;
}


#paper {
    /* Size and position set dynamically in JS (different paper sizes), for now will just make A4 */
    position: relative;
    left: 0;
    top: 0;

    background-color: white;
}


#taskbar {
    position: fixed;
    left: calc(50% - 200px);
    right: calc(50% - 200px);
    bottom: 50px;

    height: 60px;
    width: 400px;

    display: grid;
    grid-template-columns: 33% 34% 33%;
    grid-template-rows: 100%;
    place-items: center;

    background-color: #000000;
    border-radius: var(--taskbarBorderRadius);
    z-index: 1;
    transform: translate3d(0, 0, 0);
}

.taskbarButton {
    height: 100%;
    width: 100%;

    border: none;
    background-color: transparent;
}
.taskbarButton:hover{
    background-color: #212121;
    transition: 500ms background-color;
}
.taskbarButton:first-of-type {
    border-top-left-radius: var(--taskbarBorderRadius);
    border-bottom-left-radius: var(--taskbarBorderRadius);
}
.taskbarButton:last-of-type {
    border-top-right-radius: var(--taskbarBorderRadius);
    border-bottom-right-radius: var(--taskbarBorderRadius);
}
.taskBarButtonImage {
    max-height: 45%;
    max-width: 45%;
}

